[fix]修复collapse缺失expand-icon组件的问题

--- a/src/components/Card/style/card-meta.less
+++ b/src/components/Card/style/card-meta.less
@@ -27,11 +27,12 @@
       justify-content: flex-end;
       .yc-card-actions-right {
         cursor: pointer;
+        color: rgb(78, 89, 105);
+        transition: color 0.2s cubic-bezier(0, 0, 1, 1);
         display: flex;
         align-items: center;
         justify-content: center;
-        color: rgb(78, 89, 105);
-        transition: color 0.2s cubic-bezier(0, 0, 1, 1);
+        gap: 12px;
       }
     }
   }
