--- a/src/components/Collapse/style/collapse.less
+++ b/src/components/Collapse/style/collapse.less
@@ -1,7 +1,6 @@
 @component: yc-collapse;
 .@{component} {
   width: 100%;
-  height: 100%;
   overflow: hidden;
   line-height: 1.5715;
   border-radius: 4px;
